# TpPatternProject

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  GAMEGUIDE.md  README.md  main.cpp  map.h  player.h  scheme.mdj  species.h  unique.h
src/: game.h
src/buildings/: CMakeLists.txt  adapted_barracks.cpp  adapted_barracks.h  barracks  barracks.cpp  barracks.h
src/commands/: .command.h.swp  CMakeLists.txt  command.h  command_attack.cpp  command_attack.h  commandbarracks.cpp  commandbarracks.h  commands  move_unit_command.h  moveunit.cpp  moveunit.h
src/interface/: .entity.h.swp  entity.h  unit_interface.h
src/map/: CMakeLists.txt  defaultpath.h  gamemap  gamemap.cpp  gamemap.h  ipath.h  map.cpp  map.h
src/player/: player.h
src/units/: Iunit.h  archer.h  swordman.h  units
